--- a/spaceShooter.html
+++ b/spaceShooter.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Space Shooter</title>
 <head>
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<meta content="utf-8" http-equiv="encoding">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
 </head>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
@@ -11,7 +12,6 @@
 <script src="js/GraphicsCommon.js"></script>
 <script src="js/ImageLoading.js"></script>
 <script src="js/Warrior.js"></script>
-<script src="js/World.js"></script>
 <script src="js/Input.js"></script>
 <script src="js/Main.js"></script>
 </html>
